# 30-days-challenge

./: day1_intro.txt
day-1/: day1_intro.txt  task1.md
old1/old/: pyproject.toml  task-4.md
old1/old/app/: assistant.py  main.py
old1/old/task_4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
task-2/: task-2.md
task-3/: task-3.md
task-4/: .env  app.py  gemini_service.py  pdf_summarizer.py  pyproject.toml  quiz_generator.py
task-4/.gemini/: settings.json
task-6/: task6.md
