[project]
name = "task-4"
version = "0.1.0"
description = "An AI assistant using OpenAI Assistants API and Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.3.3",
    "streamlit>=1.31.0",
    "python-dotenv>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]